Fix header on mobile screen, social media icons were to narrow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,14 +74,9 @@ a {
 
 .social-media i {
     color: #c60a09;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     text-decoration: none;
 }
-
-/* Hover effect for social media icons 
-.fab:hover {
-  opacity: 0.7;
-} */
 
 /* Hover effect for social media icons - credit to Ian Lunn (https://ianlunn.github.io/Hover/) */
 /* Buzz Out */
@@ -188,6 +183,9 @@ a {
   animation-iteration-count: 1;
 }
 
+#hamburger {
+    font-size: 1.7rem !important;
+}
 
 #hero-image {
     position: relative;
@@ -202,7 +200,7 @@ a {
 .hero-text {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    font-size: 3.2rem;
+    font-size: 2.2rem;
     font-weight: 500;
     letter-spacing: 0.2rem;
     padding-top: 12.2rem;
@@ -229,6 +227,8 @@ a {
 
 .para-explore {
     margin-top: 2rem;
+    color: #000000;
+    font-size: 1.2rem;
 }
 
 /* Back to top arrow - code with small modification taken from: 
@@ -255,10 +255,6 @@ https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 
 .text-header {
     color: #c60a09;
-}
-
-.para-explore {
-    color: #000000;
 }
 
 .np-img {
@@ -326,8 +322,12 @@ form input {
         top: 0;
     }
 
+    #hamburger {
+    font-size: 1.9rem !important;
+    }
+
     .social-media i {
-        font-size: 1.8rem;
+        font-size: 1.9rem;
     }
 
     .menu-btn {
@@ -336,6 +336,11 @@ form input {
 
     #hero-image {
         height: 95vh;
+    }
+
+    .hero-text {
+        font-size: 3rem;
+        padding-top: 18rem;
     }
 }
 
@@ -347,12 +352,20 @@ form input {
         top: 0;
     }
 
+    #hamburger {
+    font-size: 1.9rem !important;
+    }
+
     .social-media i {
         font-size: 2rem;
+        margin-right: 1.5rem !important;
     }
 
     #hero-image {
         height: 90vh;
     }
 
+    .hero-text {
+        font-size: 3.2rem;
+    }
 }
